다크모드 아이콘 바꾸기+pakages 수정

--- a/packages/gatsby-theme-kb/src/components/SiteSidebar/site-sidebar.css
+++ b/packages/gatsby-theme-kb/src/components/SiteSidebar/site-sidebar.css
@@ -11,7 +11,7 @@
 }
 
 .site-sidebar__title a {
-  color: var(--kb-text-color);
+  color: var(--kb-title-color);
 }
 
 .site-sidebar__title a:hover {
